Fix search results more-info-area layout bug
Fixes #701

Float .more-info-area left to move text entirely below .index-title

--- a/app/assets/stylesheets/geoblacklight/modules/results.scss
+++ b/app/assets/stylesheets/geoblacklight/modules/results.scss
@@ -3,6 +3,7 @@
 }
 
 .more-info-area {
+  float: left;
   max-height: 100px;
 }
 
